add swagger in registration and authorization handlers
